[package]
name = "pyo3_example"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
# must match the name of the #[pymodule]
name = "pyo3_example"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.1", features = ["extension-module"] }

[build-dependencies]
pyo3-build-config = { version = "0.24.1" }
